--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "haiku",
+  "name": "Solar",
   "version": "1.0.0",
   "description": "",
   "main": "index.js",
@@ -16,7 +16,6 @@
     "css-loader": "0.28.10",
     "eslint": "4.18.2",
     "eslint-loader": "2.0.0",
-    "faker": "4.1.0",
     "html-webpack-plugin": "3.0.6",
     "jasmine": "3.1.0",
     "jasmine-core": "2.99.0",
