--- a/package.json
+++ b/package.json
@@ -3,6 +3,19 @@
   "version": "1.0.0",
   "description": "",
   "main": "index.js",
+  "scripts": {
+    "test": "karma start karma.conf.js",
+    "build": "webpack --mode development",
+    "start": "npm run build; webpack-dev-server --open --mode development",
+    "watch": "webpack --watch",
+    "lint": "eslint src/*.js"
+  },
+  "keywords": [],
+  "author": "",
+  "license": "",
+  "bugs": {
+    "url": ""
+  },
   "dependencies": {
     "bootstrap": "4.2.1",
     "jquery": "3.3.1",
@@ -32,12 +45,6 @@
     "webpack": "4.0.1",
     "webpack-cli": "2.0.9",
     "webpack-dev-server": "3.1.0"
-  },
-  "scripts": {
-    "build": "webpack --mode development",
-    "start": "webpack-dev-server --open --mode development",
-    "lint": "eslint src/*.js",
-    "test": "./node_modules/karma/bin/karma start karma.conf.js"
   },
   "keywords": [],
   "author": "",
